--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
     <title>Document</title>
 </head>
 <body>
     
+    <div class="container">
+        <div class="dictionary-container">
+            <div class="search-bar">
+                <input type="text" id="search" placeholder="search word">
+                <button class="btn">search</button>
+            </div>
+            <div class="display-area">
+
+            </div>
+        </div>
+    </div>
+
+    <script src="./main..js"></script>
 </body>
 </html>
