--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
                 <input type="text" id="search" placeholder="search word">
                 <button class="btn">search</button>
             </div>
-            <div class="display-area">
-
+            <p id="error"></p>
+            <div class="result-box">
+                <h3>Search word</h3>
             </div>
         </div>
     </div>
